<resources>
    <string name="app_name">阿狸阿猫-视讯交友</string>
    <string name="app_home_page">首页</string>
    <string name="app_im_page">聊天</string>
    <string name="find">发现</string>
    <string name="app__my_page">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_one_menu_good_select">精选</string>
    <string name="home_one_menu_same_city">同城</string>
    <string name="reward">打赏</string>
    <string name="send_msg">发消息</string>
    <string name="appointment">约会</string>
    <string name="send_flowers">送花</string>
    <string name="str_fen">粉丝</string>
    <string name="wacth">已关注</string>
    <string name="pingbi">屏蔽TA</string>
    <string name="quxiaopingbi">取消屏蔽</string>
    <string name="dynamic">动态</string>
    <string name="flower">花束</string>
    <string name="activity_name_dynamic_datails">动态详情</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="username">用户名 : </string>
    <string name="input_phone_number">输入手机号</string>
    <string name="password">密  码 : </string>
    <string name="forget_password">忘记密码</string>
    <string name="get_security_code">获取验证码</string>
    <string name="sex">性别 : </string>
    <string name="boy">男生</string>
    <string name="girls">女生</string>
    <string name="input_Security_code">输入验证码</string>
    <string name="not_empty">不能为空</string>
    <string name="request_failed">网络连接失败,请检查网络</string>
    <string name="agein_get_code">再次获取</string>
    <string name="take_picture">拍照</string>
    <string name="photo_album">相册</string>
    <string name="cancel">取消</string>
    <string name="input_password">  输入密码</string>
    <string name="framat">格式</string>
    <string name="error">错误</string>
    <string name="net_Exception">网络异常</string>
    <string name="upload_failure">上传失败</string>
    <string name="upload">上传</string>
    <string name="success">成功</string>
    <string name="private_hat">消息</string>
    <string name="friend">通讯录</string>
    <string name="loading">加载中....</string>
    <string name="already">已经</string>
    <string name="one_another">互相</string>
    <string name="no">没有</string>
    <string name="publish">发布</string>
    <string name="send_dynamic">发布动态</string>
    <string name="finish">完成</string>
    <string name="photo">图片</string>
    <string name="xml_send_red_packet">发个红包，拉近距离</string>
    <string name="input_money">输入金额</string>
    <string name="weixin_play">微信支付</string>
    <string name="aliplay_play">支付宝支付</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_affirm">支付确认中</string>
    <string name="pay_failure">支付失败</string>
    <string name="authentication">认证</string>
    <string name="withdraw_deposit">提现</string>
    <string name="order">单</string>
    <string name="code_timeout">身份过期,请重新登录</string>
    <string name="login_action">未登录，请登录，</string>
    <string name="send_dynamic_wacth_pic">发红包,看照片</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="temporary_does_not">暂不支持大于100M的视频！</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="ok">ok</string>
    <string name="nike">昵称</string>
    <string name="renzhengxin">认证信息</string>
    <string name="height">身高</string>
    <string name="address">地址</string>
    <string name="KG">KG</string>
    <string name="cm">cm</string>
    <string name="Provice">省</string>
    <string name="City">市</string>
    <string name="already_Certification">已认证</string>
    <string name="Certificationing">认证中</string>
    <string name="not_Certificationing">未认证</string>
    <string name="signed">商业签约</string>
    <string name="about_rice">约饭</string>
    <string name="iv_asleep">发呆</string>
    <string name="wacth_movie">看电影</string>
    <string name="tixian_succ">提交</string>
    <string name="system_time">系统受理</string>
    <string name="money">金额</string>
    <string name="enable_money">可提现金额 ：%1$s 元</string>
    <string name="account_number">账号 : </string>
    <string name="account_error_hint">请务必添加正确的账号,以免提现失败</string>
    <string name="name">名字</string>
    <string name="alipay">支付宝</string>
    <string name="add_card">添加提现账号</string>
    <string name="switch_card">请选择一张或者添加支付账号</string>
    <string name="money_get">只能整取</string>
    <string name="money_number_more_200">金额必须大于等于两百</string>
    <string name="add_winxin_card">添加微信</string>
    <string name="add_alipay_card">添加支付宝</string>
    <string name="winxinpay">微信</string>
    <string name="pic_more_nine">添加的图片不能大于九张</string>
    <string name="hint_dynamic_text">此时此地，想与大家分享什么？</string>
    <string name="not_success">拒绝</string>
    <string name="tixining">提现中</string>
    <string name="all_income">总收入</string>
    <string name="day_income">当日收入</string>
    <string name="yuan">元</string>
    <string name="show_wacth_redpacket">%1$s人看了照片，共%2$s元</string>
    <string name="show_wacth_video">%1$s人偷窥了视频，共%2$s元</string>
    <string name="show_wacth_voice">%1$s人偷听了语音，共%2$s元</string>
    <string name="pay">支付</string>
    <string name="switch_flower">请选择花束</string>
    <string name="rongyun_offline">您已在别的设备上登录，请重新登录</string>
    <string name="Remove_the_notification">移除t通知</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="text_numer_more_150">字数不能超过150</string>
    <string name="renzheng_rule">*   发布免费动态，收费高质量动态；\n\n*   享受打赏、红包、礼物特权；\n\n*   与所有非好友会员畅快聊天</string>
    <string name="input">输入</string>
    <string name="input_text_number_100">输入文字不能大于一百</string>
    <string name="search">搜索</string>
    <string name="avater_change">头像：</string>
    <string name="username_change">昵称：</string>
    <string name="sex_change">性别：</string>
    <string name="birthday_change">生日:</string>
    <string name="address_change">所在地:</string>
    <string name="personalized_signature_change">个性签名：</string>
    <string name="user_introduction_change">自我简介: </string>
    <string name="education_change">学历：</string>
    <string name="heigth_change">身高：</string>
    <string name="weight_change">体重：</string>
    <string name="job_change">职业：</string>
    <string name="not_available">暂无</string>
    <string name="nike_name_change">昵称：</string>
    <string name="signature">个性签名</string>
    <string name="introduction">简介</string>
    <string name="education">教育</string>
    <string name="job">工作</string>
    <string name="weight">体重</string>
    <string name="change_user_info">修改资料</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="again_input">再次输入</string>
    <string name="reset">重置</string>
    <string name="not_same">不一样</string>
    <string name="select_pic">选择图片</string>
    <string name="action">操作</string>
    <string name="delete">删除</string>
    <string name="report">举报</string>
    <string name="apply_renzheng">申请认证</string>
    <string name="renzheng_condition">为了避免不良会员发布无意义，不良信息，以及利用第三方机器人进行会员多开（如微信陌陌等），行坑蒙拐骗、色情等不合法的会员行为，我们启用严格认证机制。请花费1分钟时间，按照提示完成认证，开启认证会员特权。</string>
    <string name="renz">为避免诈骗，诱骗，虚假信息，虚假广告信息，婚托，酒托等不合法行为，我们启用严格认证机制，无论男女会员，都必须通过认证后，才可以正常使用发布公开和私密动态信息，与非好友会员聊天（好友之间不认证也不会限制聊天）等权利。</string>
    <string name="text_talk">1.您在本平台通过用户打赏、送花、以及私密收费动态所产生的收益，平台会从中抽取50％的平台运营费用后，将剩余50％存入您的账户余额；\n
    2.当您的账户收益超过10元时即可进行提现，您每提现一笔平台都会扣除由第三方平台收取的6％渠道费；目前提现仅支持支付宝和微信账号。\n
    3.请您严格遵守国家相关法律法规及平台相关规则，切勿徇私舞弊，否则一经发现，平台有权对您进行冻结账户资金及封号处理。</string>
    <string name="red_person_renzheng">会员诚信度认证</string>
    <string name="pic_size_error">照片的数量不正确</string>
    <string name="network_error">网络异常请稍后再试</string>
    <string name="login_code_timeout">身份信息已过期，请重新登录</string>
    <string name="down_success">下载成功</string>
    <string name="pdateNow">立即安装</string>
    <string name="locationing">定位中......</string>
    <string name="change_password">修改密码</string>
    <string name="setting">设置</string>
    <string name="not_dredge">暂未开通</string>
    <string name="person_info">个人信息</string>
    <string name="my_friend">好友列表</string>
    <string name="my_wacth">我关注的</string>
    <string name="my_fen">关注我的</string>
    <string name="flower_msg">鲜花代表我的心意！</string>
    <string name="birthday">生日</string>
    <string name="together">相互</string>
    <string name="not_search_reason">没有找相关用户</string>
    <string name="pic_size_not_six">照片不能少于六张</string>
    <string name="not_low_one">少于一元</string>
    <string name="not_more">超过上限</string>
    <string name="show_verson_name">版本号 ：</string>
    <string name="already_wacth">已关注</string>
    <string name="delete_wacth">取消关注</string>
    <string name="rank">排行</string>
    <string name="experience_gift">经验礼物</string>
    <string name="nearby">附近</string>
    <string name="up_dynamic">置顶</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请重试</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="filter">筛选</string>
    <string name="nearby_wacth_boy">只看男</string>
    <string name="nearby_wacth_girl">只看女</string>
    <string name="nearby_all">全部</string>
    <string name="dynamic_publish_edittext_hint">分享这一刻想法，付费动态需要累积粉丝才能获取更好的收益哦。</string>
    <string name="dynamic_charge">是否设置为收费动态</string>
    <string name="dynamic_show_adress">地址显示</string>
    <string name="add_lable">添加标签</string>
    <string name="pic">图片</string>
    <string name="video">视频</string>
    <string name="voice">语音</string>
    <string name="press_to_speak">按住说话</string>
    <string name="lable_is_empty">请选择标签</string>
    <string name="dynamic_content_is_empty">请选择图片/语音/视频</string>
    <string name="dynamic_pic_not_more_6">收费图片不能少于六张</string>
    <string name="dynamic_pic_not_more_1">免费图片不能少于一张</string>
    <string name="input_not_empty">输入不能为空</string>
    <string name="publish_failure">发布失败</string>
    <string name="vip_enjoy_prerogative">VIP享受多种特权</string>
    <string name="vip_combo">VIP套餐</string>
    <string name="vip_12_low_money">省300元</string>
    <string name="vip_3_low_money">省30元</string>
    <string name="tv_recommend">推荐</string>
    <string name="vip_prerogative_explain">VIP 特权说明</string>
    <string name="vip_prerogative_explain_">1.免费查看所有会员的私密收费动态；\n2.与非好友会员免费聊天。</string>
    <string name="vip_prerogative_explain_late">1.免费查看所有会员的私密(收费)动态；\n2.可与全站任意会员免费聊天；\n3.成为超级认证会员，享受付费认证会员的一切特权</string>
    <string name="immediately_dredge">立即开通</string>
    <string name="appbar_vip">开通VIP会员</string>
    <string name="buy_dynamic_vip">对不起，您不是VIP会员，该条信息为私密收费，您需要支付后才可以观看。VIP会员可以免费观看任意视频图片语音资料。</string>
    <string name="upgrade_vip">成为VIP</string>
    <string name="single_buy">单独购买</string>
    <string name="combo_type"><![CDATA[ %1$s个月，<font color="#ff8201">%2$s</font> 元 ]]>  </string>
    <string name="refresh_page">刷新页面</string>
    <string name="not_certification">你还没认证，请认证</string>
    <string name="select">* 确认信息，申请认证后信息不可更改</string>
    <string name="rule_talk">1）严格的认证的机制为了避免不良会员无意义信息和不良信息，以及利用第三方机器人进行会员多开（如微信陌陌多开）进行坑蒙拐骗、色情等不合法的会员行为，给平台用户一个纯净、健康的社交环境；
  \n2）申请认证需支付59元（人民币）保证金，保证金冻结周期为一个月，一个月内无违规行为（行骗、酒托、饭托、虚假信息、诈骗、赌博、色情等国家法律法规不允许的行为，以及纯广告信息等） ，保证金会直接解冻、您可以在财务中心查看，提现，也可用来消费；
  \n3）若您在一个月内发布上述所说的违规内容，每发现一次，保证金冻结周期延期一个月，被发现超过三次者，保证金不予退还，同时将会对您进行降低会员级别或封号处理。</string>
    <string name="tv_ren">您需要支付59元人民币完成诚信认证，认证费将作为保证金返还到您的财务中心，一个月后可直接提现、消费。\n  请确认是否支付诚信保证金？</string>
    <string name="talk">规则说明</string>
    <string name="renzheng">认证特权</string>
    <string name="more">更多</string>
    <string name="asleep">发呆</string>
    <string name="engagment_meal">约饭</string>
    <string name="movie">电影</string>
    <string name="shop">逛街</string>
    <string name="coffee">咖啡</string>
    <string name="travel">旅游</string>
    <string name="other">其他</string>
</resources>