<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_white_color"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@color/gray_color" />

        <TextView
            android:id="@+id/tv_girls"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            android:gravity="center"
            android:text="@string/girls" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@color/gray_color" />

        <TextView
            android:id="@+id/tv_boy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            android:gravity="center"
            android:text="@string/boy" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@color/gray_color" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            android:gravity="center"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>